[package]
name = "git-credential-github-keychain"
version = "0.1.0"
authors = ["Jake Wilkins <jakewilkins@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "1.1.2"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
confy = { git = "https://github.com/rust-cli/confy", rev = "642822413139ce38a96b916190e8c7fd5b88e814" }
chrono = "0.4"

