[package]
name = "git-credential-github-keychain"
version = "0.2.0"
authors = ["Jake Wilkins <jakewilkins@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = { git = 'https://github.com/jaysonsantos/keyring-rs', branch = 'update-secret-service' }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0"
confy = { git = "https://github.com/rust-cli/confy", rev = "664992aecd97b4af0eda8d9d2825885662e1c6b4" }
chrono = "0.4"
github-device-flow = "0.2.0"


[target.'cfg(target_arch = "arm")'.dependencies]
openssl = { version = "0.10.41", features = ["vendored"] }
